--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <title>G3 Articture</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="work-sans-font ">
 
-    <header>
+   <header class="bg_light">
+    <nav class="navbar display_flex">
+        <h3 class="brand">G3 Architects</h3>
+       
+        <ul class="nav-links display_flex">
+            <li class="nav-item"><a href="" class="nav-link text_gray">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link text_gray">About</a></li>
+            <li class="nav-item"><a href="" class="nav-link text_gray">Contact Us</a></li>
+            <li class="nav-item"><a href="" class="nav-link text_gray">Login</a></li>
+        </ul>
+    </nav>
 
-    </header>
+    <div class="banner">
+        <div class="banner-content">
+         <h1 class="banner-title">Brand New Group of Architects</h1>
+
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+        <button class="btn-primary">Explore More</button>
+        </div>
+
+        <img class="banner-image" src="./images/banner.png" alt="">
+    </div>
+   </header>
 
     <main>
 
