--- a/index.html
+++ b/index.html
@@ -56,6 +56,57 @@
             
         </section>
 
+        <!-- Features Section Section -->
+        <section class="features display_flex">
+            <div>
+                <h3 class="section-title" id="feature-section-left-bar">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+
+                <!-- Features Card Container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text_light_gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text_light_gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text_light_gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text_light_gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                 </div>
+
+
+            </div>
+
+            <div class="feature-architect">
+                <img src="images/architect.png" alt="">
+
+                <button class="btn-primary " id="experience-badge">
+                    <span id="experience-year">10+ Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
+
+
         <section class="">  
         </section>
 
