--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
 
     <main>
 
+        <section class="teams display_flex">
+            <div class="team-image-container">
+                <img src="./images/team1.png" alt="">
+
+                <img src="./images/team2.png" alt="">
+
+                <img src="./images/team3.png" alt="">
+
+                <img src="./images/team4.png" alt="">
+            </div>
+
+            <div class="our-features">
+                <h3 class="feature-title section_title"><span id="quick-list" class="text_light_gray">Quick list</span> of our <span id="featuress" class="text_primary">Features</span></h3>
+                <p class="feature-description text_light_gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ea.</p>
+
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+            
+        </section>
+
+    
     </main>
 
     <footer>
