added some facts section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
             
         </section>
 
+        <section class="">  
+        </section>
+
+
+        <section class="out-facts">
+            <h3 class="section_title">Some Facts</h3>
+            <p class="text_light_gray fact-description">There are many cariation of Lorem ipsum dolor sit amet.</p>
+
+            <div class="facts-container">
+                <div class="fact-card display_flex">
+                   <div>
+                     <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winings</h5>
+                   </div>
+                </div>
+                <div class="fact-card display_flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Projects Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display_flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Our Clients</h5>
+                    </div>
+                </div>
+                <div class="fact-card display_flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     
     </main>
 
