--- a/index.html
+++ b/index.html
@@ -96,6 +96,28 @@
             </div>
         </section>
 
+
+        <!-- Our Sponsor-->
+         <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsor</h3>
+                <p class="banner-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+
+            <div class="sponsor-companies">
+                <img src="./images/sponsors/amazon.png" alt="">
+
+                <img src="./images/sponsors/figma.png" alt="">
+
+
+                <img src="./images/sponsors/google.png" alt="">
+
+                <img src="./images/sponsors/spotify.png" alt="">
+
+                <img src="./images/sponsors/telerama.png" alt="">
+            </div>
+         </section>
+
     
     </main>
 
